--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,33 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  border: none;
+  border-bottom: 1px solid rgb(25, 20, 20);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.top {
+  margin-top: 1rem;
+  gap: 1rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Add {
+
+  background-color: #0d0a0a;
+  cursor: pointer;
+  color: #ffffff;
+  padding: .5rem 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.todo {
+  padding: .5rem 1rem;
+  justify-content: space-between;
+  background-color: #181818;
+  margin: 1rem;
+  display: flex;
+
+  color: #ffffff;
 }
